making the center elements has space in left and right in all screen

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
       placeat. Repudiandae accusamus error repellat perspiciatis voluptate
       dolor, qui aliquam illum? Enim ut provident eius dicta libero quasi cum.
     </div>
-    <div class="home">Home</div>
     <div class="story">Testimionals</div>
-    <div class="img__gallery">Image gallery</div>
+    <div class="homes">Homes</div>
+    <div class="img__galleries">Image galleries</div>
     <div class="footer">Footer</div>
   </body>
 </html>
