Maintain gap to each feature grid item

--- a/index.html
+++ b/index.html
@@ -13,31 +13,66 @@
     </div>
     <div class="top-relators">Top 3 Relators</div>
     <div class="features">
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi
-      perferendis numquam sunt quibusdam consequuntur voluptatem reprehenderit,
-      quae alias quo beatae, doloribus explicabo voluptate doloremque? Similique
-      vitae quia corporis non, deserunt perferendis qui doloribus voluptate
-      obcaecati officia. Recusandae libero commodi possimus blanditiis quibusdam
-      delectus neque quo qui molestiae quisquam quam reprehenderit iste ab quasi
-      explicabo eos esse modi perspiciatis rem nihil, numquam eaque. Laborum
-      possimus necessitatibus velit natus. Debitis officia eligendi, cumque,
-      exercitationem adipisci ullam voluptatum enim fugiat expedita totam nobis?
-      Provident velit eius sint, nisi quisquam, in, eaque corporis sit totam
-      eligendi perspiciatis odit blanditiis ea distinctio iste et dolores! Lorem
-      ipsum dolor sit, amet consectetur adipisicing elit. Perspiciatis cum
-      veniam sequi labore similique quis esse neque debitis facere autem aperiam
-      inventore hic, eveniet architecto rerum accusantium eum culpa ea vel rem
-      voluptatibus. Officiis id soluta, optio saepe quia error nobis sit quo
-      recusandae quos aspernatur dicta quas iusto obcaecati at labore autem
-      dolore. Perferendis eaque modi deleniti quae repudiandae odit, dolore
-      atque. Atque non, sunt illo quos id ex voluptate unde eius labore
-      molestias culpa odit dignissimos similique aperiam officiis, inventore
-      maiores error ab. Quos, unde! Qui debitis maxime fugit neque optio nostrum
-      doloribus, iste, perspiciatis cumque ipsam praesentium. Lorem ipsum dolor
-      sit, amet consectetur adipisicing elit. Repellendus labore molestiae
-      possimus deserunt quaerat distinctio. Nobis hic magni eaque harum amet
-      placeat. Repudiandae accusamus error repellat perspiciatis voluptate
-      dolor, qui aliquam illum? Enim ut provident eius dicta libero quasi cum.
+      <div class="feature">
+        <svg class="feature__icon">
+          <use xlink:href="./sprite.svg#icon-sphere"></use>
+        </svg>
+        <h3>Worlds best luxury home</h3>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur
+          distinctio necessitatibus pariatur voluptatibus.
+        </p>
+      </div>
+      <div class="feature">
+        <svg class="feature__icon">
+          <use xlink:href="./sprite.svg#icon-location2"></use>
+        </svg>
+        <h3>Worlds best luxury home</h3>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur
+          distinctio necessitatibus pariatur voluptatibus.
+        </p>
+      </div>
+      <div class="feature">
+        <svg class="feature__icon">
+          <use xlink:href="./sprite.svg#icon-lock"></use>
+        </svg>
+        <h3>Worlds best luxury home</h3>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur
+          distinctio necessitatibus pariatur voluptatibus.
+        </p>
+      </div>
+      <div class="feature">
+        <svg class="feature__icon">
+          <use xlink:href="./sprite.svg#icon-presentation"></use>
+        </svg>
+        <h3>Worlds best luxury home</h3>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur
+          distinctio necessitatibus pariatur voluptatibus.
+        </p>
+      </div>
+      <div class="feature">
+        <svg class="feature__icon">
+          <use xlink:href="./sprite.svg#icon-trophy"></use>
+        </svg>
+        <h3>Worlds best luxury home</h3>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur
+          distinctio necessitatibus pariatur voluptatibus.
+        </p>
+      </div>
+      <div class="feature">
+        <svg class="feature__icon">
+          <use xlink:href="./sprite.svg#icon-key"></use>
+        </svg>
+        <h3>Worlds best luxury home</h3>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur
+          distinctio necessitatibus pariatur voluptatibus.
+        </p>
+      </div>
     </div>
     <div class="story">Testimionals</div>
     <div class="homes">Homes</div>
