change each feature title and description

--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
         <svg class="feature__icon">
           <use xlink:href="./sprite.svg#icon-location2"></use>
         </svg>
-        <h3>Worlds best luxury home</h3>
+        <h3>All home in top location</h3>
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur
-          distinctio necessitatibus pariatur voluptatibus.
+          Tenetur distinctio necessitatibus pariatur voluptatibus quidem
+          consequatur harum.
         </p>
       </div>
       <div class="feature">
         <svg class="feature__icon">
           <use xlink:href="./sprite.svg#icon-lock"></use>
         </svg>
-        <h3>Worlds best luxury home</h3>
+        <h3>Secured Payment on ghar pauni thau</h3>
         <p>
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur
           distinctio necessitatibus pariatur voluptatibus.
@@ -47,7 +47,7 @@
         <svg class="feature__icon">
           <use xlink:href="./sprite.svg#icon-presentation"></use>
         </svg>
-        <h3>Worlds best luxury home</h3>
+        <h3>Top 1% relators</h3>
         <p>
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur
           distinctio necessitatibus pariatur voluptatibus.
@@ -57,7 +57,7 @@
         <svg class="feature__icon">
           <use xlink:href="./sprite.svg#icon-trophy"></use>
         </svg>
-        <h3>Worlds best luxury home</h3>
+        <h3>Only best propetries</h3>
         <p>
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur
           distinctio necessitatibus pariatur voluptatibus.
@@ -67,7 +67,7 @@
         <svg class="feature__icon">
           <use xlink:href="./sprite.svg#icon-key"></use>
         </svg>
-        <h3>Worlds best luxury home</h3>
+        <h3>New home in one week</h3>
         <p>
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur
           distinctio necessitatibus pariatur voluptatibus.
