Use absolute concept to stack above the image

--- a/index.html
+++ b/index.html
@@ -75,7 +75,47 @@
       </div>
     </div>
     <div class="story">Testimionals</div>
-    <div class="homes">Homes</div>
+    <div class="homes">
+      <div class="home">
+        <img
+          src="https://nexter.netlify.app/img/house-1.jpeg"
+          alt="Beautiful Family House"
+          srcset=""
+          class="home__image"
+        />
+        <h5 class="home__name">Beautiful Family House</h5>
+        <div class="home__location">
+          <svg class="home__icon">
+            <use xlink:href="./sprite.svg#icon-location2"></use>
+          </svg>
+          <p>USA</p>
+        </div>
+        <div class="home__roomcounts">
+          <svg class="home__icon">
+            <use xlink:href="./sprite.svg#icon-user"></use>
+          </svg>
+          <p>5 rooms</p>
+        </div>
+        <div class="home__area">
+          <svg class="home__icon">
+            <use xlink:href="./sprite.svg#icon-expand"></use>
+          </svg>
+          <p>325m<sup>2</sup></p>
+        </div>
+        <div class="home__price">
+          <svg class="home__icon">
+            <use xlink:href="./sprite.svg#icon-key"></use>
+          </svg>
+          <p>$1,200,000</p>
+        </div>
+        <button class="home__button">contact Relators</button>
+      </div>
+      <div>card2</div>
+      <div>card3</div>
+      <div>card4</div>
+      <div>card5</div>
+      <div>card6</div>
+    </div>
     <div class="img__galleries">Image galleries</div>
     <div class="footer">Footer</div>
   </body>
