Footer Part Done

--- a/index.html
+++ b/index.html
@@ -117,24 +117,24 @@
           srcset=""
           class="home__image"
         />
-        <h5 class="home__name">Cozy Country House</h5>
+        <h5 class="home__name">Modern Glass Villa</h5>
         <div class="home__location">
           <svg class="home__icon">
             <use xlink:href="./sprite.svg#icon-location2"></use>
           </svg>
-          <p>USA</p>
+          <p>Canada</p>
         </div>
         <div class="home__roomcounts">
           <svg class="home__icon">
             <use xlink:href="./sprite.svg#icon-user"></use>
           </svg>
-          <p>5 rooms</p>
+          <p>6 rooms</p>
         </div>
         <div class="home__area">
           <svg class="home__icon">
             <use xlink:href="./sprite.svg#icon-expand"></use>
           </svg>
-          <p>325m<sup>2</sup></p>
+          <p>450m<sup>2</sup></p>
         </div>
         <div class="home__price">
           <svg class="home__icon">
@@ -148,6 +148,40 @@
         <img
           src="https://nexter.netlify.app/img/house-1.jpeg"
           alt="Cozy Country House"
+          srcset=""
+          class="home__image"
+        />
+        <h5 class="home__name">Cozy Country House</h5>
+        <div class="home__location">
+          <svg class="home__icon">
+            <use xlink:href="./sprite.svg#icon-location2"></use>
+          </svg>
+          <p>UK</p>
+        </div>
+        <div class="home__roomcounts">
+          <svg class="home__icon">
+            <use xlink:href="./sprite.svg#icon-user"></use>
+          </svg>
+          <p>4 rooms</p>
+        </div>
+        <div class="home__area">
+          <svg class="home__icon">
+            <use xlink:href="./sprite.svg#icon-expand"></use>
+          </svg>
+          <p>250m<sup>2</sup></p>
+        </div>
+        <div class="home__price">
+          <svg class="home__icon">
+            <use xlink:href="./sprite.svg#icon-key"></use>
+          </svg>
+          <p>$850,000</p>
+        </div>
+        <button class="home__button">contact Relators</button>
+      </div>
+      <div class="home">
+        <img
+          src="https://nexter.netlify.app/img/house-1.jpeg"
+          alt="Beautiful Family House"
           srcset=""
           class="home__image"
         />
@@ -185,7 +219,7 @@
           srcset=""
           class="home__image"
         />
-        <h5 class="home__name">Majestic Palace House</h5>
+        <h5 class="home__name">Majestic Place House</h5>
         <div class="home__location">
           <svg class="home__icon">
             <use xlink:href="./sprite.svg#icon-location2"></use>
@@ -219,41 +253,7 @@
           srcset=""
           class="home__image"
         />
-        <h5 class="home__name">Beautiful</h5>
-        <div class="home__location">
-          <svg class="home__icon">
-            <use xlink:href="./sprite.svg#icon-location2"></use>
-          </svg>
-          <p>USA</p>
-        </div>
-        <div class="home__roomcounts">
-          <svg class="home__icon">
-            <use xlink:href="./sprite.svg#icon-user"></use>
-          </svg>
-          <p>5 rooms</p>
-        </div>
-        <div class="home__area">
-          <svg class="home__icon">
-            <use xlink:href="./sprite.svg#icon-expand"></use>
-          </svg>
-          <p>325m<sup>2</sup></p>
-        </div>
-        <div class="home__price">
-          <svg class="home__icon">
-            <use xlink:href="./sprite.svg#icon-key"></use>
-          </svg>
-          <p>$1,200,000</p>
-        </div>
-        <button class="home__button">contact Relators</button>
-      </div>
-      <div class="home">
-        <img
-          src="https://nexter.netlify.app/img/house-1.jpeg"
-          alt="Beautiful Family House"
-          srcset=""
-          class="home__image"
-        />
-        <h5 class="home__name">Beautiful Family House</h5>
+        <h5 class="home__name">Modern Family Apartment</h5>
         <div class="home__location">
           <svg class="home__icon">
             <use xlink:href="./sprite.svg#icon-location2"></use>
@@ -282,6 +282,27 @@
       </div>
     </div>
     <div class="img__galleries">Image galleries</div>
-    <div class="footer">Footer</div>
+    <footer class="footer">
+      <ul class="nav">
+        <li class="nav__item">
+          <a href="" class="nav__link">find your dream home</a>
+        </li>
+        <li class="nav__item">
+          <a href="" class="nav__link">Request Proposal</a>
+        </li>
+        <li class="nav__item">
+          <a href="" class="nav__link">Download home planner</a>
+        </li>
+        <li class="nav__item">
+          <a href="" class="nav__link">Contact Us</a>
+        </li>
+        <li class="nav__item">
+          <a href="" class="nav__link">Submit your property</a>
+        </li>
+        <li class="nav__item">
+          <a href="" class="nav__link">Come work with us</a>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
