Footer part copyright text include

--- a/index.html
+++ b/index.html
@@ -74,7 +74,10 @@
         </p>
       </div>
     </div>
-    <div class="story">Testimionals</div>
+    <div class="story">
+      <div class="story__picture">Story Picture</div>
+      <div class="story__content">Story Content</div>
+    </div>
     <div class="homes">
       <div class="home">
         <img
@@ -303,6 +306,12 @@
           <a href="" class="nav__link">Come work with us</a>
         </li>
       </ul>
+      <div class="copyright">
+        copyrightklsdjgliajsilfgknasjkdhgkjasfhdngkjbasfhkughabjksdgbaksudhgbafjksdhgbajksdvbkufhjb
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
+        quasi tempora vitae dolorum libero ipsam alias ea voluptates, est
+        doloribus?]
+      </div>
     </footer>
   </body>
 </html>
