Added margin bottom to each story right part

--- a/index.html
+++ b/index.html
@@ -75,8 +75,20 @@
       </div>
     </div>
 
-    <div class="story__picture">Story Picture</div>
-    <div class="story__content">Story Content</div>
+    <div class="story__picture">
+      <img src="https://nexter.netlify.app/img/story-1.jpeg" alt="" srcset="" />
+    </div>
+    <div class="story__content">
+      <h3 class="heading-3 mb-xs">HAPPY CUSTOMERS</h3>
+      <h2 class="heading-2 mb-sm">
+        &ldquo;The best decision of my lives&ldquo;
+      </h2>
+      <p class="mb-sm story__text">
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci,
+        veritatis?
+      </p>
+      <button class="btn">Find Your Own Home</button>
+    </div>
 
     <div class="homes">
       <div class="home">
