--- a/index.html
+++ b/index.html
@@ -76,7 +76,18 @@
     </div>
 
     <div class="story__picture">
-      <img src="https://nexter.netlify.app/img/story-1.jpeg" alt="" srcset="" />
+      <img
+        src="https://nexter.netlify.app/img/story-1.jpeg"
+        alt="Couple with new house"
+        srcset=""
+        class="story__img--1"
+      />
+      <img
+        src="https://nexter.netlify.app/img/story-2.jpeg"
+        alt="New House"
+        srcset=""
+        class="story__img--2"
+      />
     </div>
     <div class="story__content">
       <h3 class="heading-3 mb-xs">HAPPY CUSTOMERS</h3>
