Make seenon___text grid comntainer and divide the column into 3 column middle with max-content size

--- a/index.html
+++ b/index.html
@@ -9,7 +9,22 @@
   <body class="container">
     <div class="sidebar">sidebar</div>
     <div class="header">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, fugit?
+      <img
+        src="./Images/logo.png"
+        alt="Header Logo"
+        srcset=""
+        class="header__logo"
+      />
+      <h3 class="heading-3">Your Own Home</h3>
+      <h1 class="heading-1 text--white">The Ultimate personal freedom</h1>
+      <button class="btn text--white">View Our Properties</button>
+      <div class="seenon__text">Seen On</div>
+      <div class="seenon__logo">
+        <img src="./Images/logo-bbc.png" alt="" />
+        <img src="./Images/logo-bi.png" alt="" />
+        <img src="./Images/logo-forbes.png" alt="" />
+        <img src="./Images/logo-techcrunch.png" alt="" />
+      </div>
     </div>
     <div class="top-relators">Top 3 Relators</div>
     <div class="features">
@@ -104,7 +119,7 @@
     <div class="homes">
       <div class="home">
         <img
-          src="https://nexter.netlify.app/img/house-1.jpeg"
+          src="./Images/house-1.jpeg"
           alt="Beautiful Family House"
           srcset=""
           class="home__image"
@@ -138,7 +153,7 @@
       </div>
       <div class="home">
         <img
-          src="https://nexter.netlify.app/img/house-1.jpeg"
+          src="./Images/house-2.jpeg"
           alt="Modern Glass Villa"
           srcset=""
           class="home__image"
@@ -172,7 +187,7 @@
       </div>
       <div class="home">
         <img
-          src="https://nexter.netlify.app/img/house-1.jpeg"
+          src="./Images/house-3.jpeg"
           alt="Cozy Country House"
           srcset=""
           class="home__image"
@@ -206,7 +221,7 @@
       </div>
       <div class="home">
         <img
-          src="https://nexter.netlify.app/img/house-1.jpeg"
+          src="./Images/house-4.jpeg"
           alt="Beautiful Family House"
           srcset=""
           class="home__image"
@@ -240,7 +255,7 @@
       </div>
       <div class="home">
         <img
-          src="https://nexter.netlify.app/img/house-1.jpeg"
+          src="./Images/house-5.jpeg"
           alt="Beautiful Family House"
           srcset=""
           class="home__image"
@@ -274,7 +289,7 @@
       </div>
       <div class="home">
         <img
-          src="https://nexter.netlify.app/img/house-1.jpeg"
+          src="./Images/house-6.jpeg"
           alt="Beautiful Family House"
           srcset=""
           class="home__image"
