--- a/index.html
+++ b/index.html
@@ -19,14 +19,35 @@
       <h1 class="heading-1 text--white">The Ultimate personal freedom</h1>
       <button class="btn text--white">View Our Properties</button>
       <div class="seenon__text">Seen On</div>
-      <div class="seenon__logo">
+      <div class="seenon__logos">
         <img src="./Images/logo-bbc.png" alt="" />
         <img src="./Images/logo-bi.png" alt="" />
         <img src="./Images/logo-forbes.png" alt="" />
         <img src="./Images/logo-techcrunch.png" alt="" />
       </div>
     </div>
-    <div class="top-relators">Top 3 Relators</div>
+    <div class="top-relators">
+      <h3 class="heading-3">Top 3 Realtors</h3>
+
+      <div class="relator__list">
+        <img src="./Images/realtor-1.jpeg" alt="" srcset="" />
+        <div class="realtor__details">
+          <h4 class="heading-4 text--white">Erik Feinman</h4>
+          <p class="relator__sold">245 houses sold</p>
+        </div>
+        <img src="./Images/realtor-2.jpeg" alt="" srcset="" />
+        <div class="realtor__details">
+          <h4 class="heading-4 text--white">Kim Brawn</h4>
+          <p class="relator__sold">245 houses sold</p>
+        </div>
+        <img src="./Images/realtor-3.jpeg" alt="" srcset="" />
+        <div class="realtor__details">
+          <h4 class="heading-4 text--white">Toby Ramse</h4>
+          <p class="relator__sold">245 houses sold</p>
+        </div>
+      </div>
+    </div>
+
     <div class="features">
       <div class="feature">
         <svg class="feature__icon">
