--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body class="container">
-    <div class="sidebar">sidebar</div>
+    <div class="sidebar">
+      <div>Home</div>
+      <div>About</div>
+      <!-- <div class="about-us">About us</div>
+      <div class="testimionals">Testimionals</div> -->
+      <div>Services</div>
+      <div>Hello3</div>
+    </div>
     <div class="header">
       <img
         src="./Images/logo.png"
